# eusou-api

./: .gitignore  handle_health_check.py  handle_periodic_health_check.py  handle_shutdown_server.py  handle_startup_server.py  main.py  pyproject.toml  requirements.txt
controllers/: docs.py  workers.py
middlewares/: add_cors_middleware.py
models/: auth.py
security/: create_access_token.py  verify_token.py
